--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -1,4 +1,4 @@
-@import '../styles/global.css';
+@import '../../styles/global.css';
 
 /* Header */
 header {
@@ -100,7 +100,10 @@ header {
 }
 
 /* List Movies */
-.movie-information-container {
+#movies {
+  margin-bottom: 4rem;
+}
+.movie-container {
   align-items: center;
   background-color: var(--color-secondary);
   border-radius: 8px;
@@ -112,13 +115,17 @@ header {
   padding: 30px;
 }
 
+.movie-container + .movie-container {
+  margin-top: 2.66rem;
+}
+
 @media screen and (max-width: 767px){
-  .movie-information-container {
+  .movie-container {
     grid-template-columns: repeat(1, 1fr);
   }
 }
 
-.movie-information-container .movie-details {
+.movie-container .movie-details {
   align-items: center;
   display: grid;
   gap: 1rem;
@@ -126,50 +133,52 @@ header {
 }
 
 @media screen and (max-width: 767px){
-  .movie-information-container .movie-details {
+  .movie-container .movie-details {
     grid-template-columns: repeat(1, 1fr);
     text-align: center;
   }
 }
 
-.movie-information-container .movie-details .movie-image img {
+.movie-container .movie-details .movie-image img {
   border-radius: 50%;
+  height: 180px;
+  width: 180px;
 }
 
-.movie-information-container .movie-details .movie-information h2 {
+.movie-container .movie-details .movie-information h2 {
   color: var(--color-gray-100);
   font-size: 1rem;
   font-weight: var(--font-weight-medium);
   line-height: 22px;
 }
 
-.movie-information-container .movie-details .movie-information .movie-score-fovorite-container {
+.movie-container .movie-details .movie-information .movie-score-fovorite-container {
   display: flex;
   gap: 1rem;
   margin-top: 1.33rem;
 }
 
 @media screen and (max-width: 767px){
-  .movie-information-container .movie-details .movie-information .movie-score-fovorite-container {
+  .movie-container .movie-details .movie-information .movie-score-fovorite-container {
     justify-content: center;
   }
 }
 
-.movie-information-container .movie-details .movie-information .movie-score-fovorite-container .score,
-.movie-information-container .movie-details .movie-information .movie-score-fovorite-container .favorite {
+.movie-container .movie-details .movie-information .movie-score-fovorite-container .score,
+.movie-container .movie-details .movie-information .movie-score-fovorite-container .favorite {
   align-items: center;
   display: flex;
   gap: 0.5rem;
 }
 
-.movie-information-container .movie-details .movie-information .movie-score-fovorite-container .score span,
-.movie-information-container .movie-details .movie-information .movie-score-fovorite-container .favorite span {
+.movie-container .movie-details .movie-information .movie-score-fovorite-container .score span,
+.movie-container .movie-details .movie-information .movie-score-fovorite-container .favorite span {
   color: var(--color-gray-100);
   font-weight: var(--font-weight-normal);
   line-height: 22px;
 }
 
-.movie-information-container .movie-description p{
+.movie-container .movie-description p{
   font-weight: var(--font-weight-medium);
   line-height: 32px;
 }
